--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,7 +1,7 @@
 FROM alpine AS qemu
 
 #QEMU Download
-ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v4.0.0%2Bbalena2/qemu-4.0.0.balena2-aarch64.tar.gz
+ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v4.0.0%2Bbalena2/qemu-4.0.0.balena2-arm.tar.gz
 RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
 
 FROM jellyfin/jellyfin:latest
