--- a/Dockerfile.unstable.arm
+++ b/Dockerfile.unstable.arm
@@ -1,10 +1,10 @@
 FROM alpine AS qemu
 
 #QEMU Download
-ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v4.0.0%2Bbalena2/qemu-4.0.0.balena2-aarch64.tar.gz
+ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v4.0.0%2Bbalena2/qemu-4.0.0.balena2-arm.tar.gz
 RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
 
-FROM jellyfin/jellyfin:latest
+FROM jellyfin/jellyfin:unstable
 
 # Add QEMU
 COPY --from=qemu qemu-aarch64-static /usr/bin
