--- a/Dockerfile.unstable.arm64
+++ b/Dockerfile.unstable.arm64
@@ -1,4 +1,13 @@
+FROM alpine AS qemu
+
+#QEMU Download
+ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v4.0.0%2Bbalena2/qemu-4.0.0.balena2-aarch64.tar.gz
+RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
+
 FROM jellyfin/jellyfin:unstable
+
+# Add QEMU
+COPY --from=qemu qemu-aarch64-static /usr/bin
 
 RUN apt update && \
     apt install -y openssh-client python3-yaml wget &&\
