--- a/hooks/build
+++ b/hooks/build
@@ -5,4 +5,4 @@ if [ $BUILD_ARCH == "unstable"]; then
     BUILD_ARCH=$(echo "${DOCKERFILE_PATH}" | cut -d '.' -f 3)
 fi
 
-docker build --platform ${BUILD_ARCH} -f ${DOCKERFILE_PATH} --pull -t ${IMAGE_NAME}
+docker build --platform ${BUILD_ARCH} -f ${DOCKERFILE_PATH} --pull -t ${IMAGE_NAME} .
