--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -1,13 +1,16 @@
 FROM alpine AS qemu
 
-#QEMU Download
+# QEMU Download
 ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v4.0.0%2Bbalena2/qemu-4.0.0.balena2-arm.tar.gz
 RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
 
-FROM jellyfin/jellyfin:latest
+FROM --platform=linux/arm jellyfin/jellyfin:latest
 
 # Add QEMU
 COPY --from=qemu qemu-arm-static /usr/bin
+
+# Add Labels
+LABEL maintainer admin@bitwrk.de
 
 RUN apt update && \
     apt install -y openssh-client python3-yaml wget &&\
