--- a/Dockerfile.unstable.arm
+++ b/Dockerfile.unstable.arm
@@ -13,8 +13,9 @@ COPY --from=qemu qemu-arm-static /usr/bin
 LABEL maintainer admin@bitwrk.de
 
 RUN apt update && \
-    apt install -y openssh-client python3-yaml wget &&\
-    wget https://raw.githubusercontent.com/joshuaboniface/rffmpeg/master/rffmpeg.py -O /usr/local/bin/rffmpeg && \
+    apt install -y openssh-client python3-yaml python3-click wget &&\
+    wget https://raw.githubusercontent.com/joshuaboniface/rffmpeg/master/rffmpeg -O /usr/local/bin/rffmpeg && \
+    sed -i 's/"jellyfin"/"root"/g' /usr/local/bin/rffmpeg && \
     chmod +x /usr/local/bin/rffmpeg && \
     ln -s /usr/local/bin/rffmpeg /usr/local/bin/ffmpeg && \
     ln -s /usr/local/bin/rffmpeg /usr/local/bin/ffprobe && \
