--- a/Dockerfile.unstable.amd64
+++ b/Dockerfile.unstable.amd64
@@ -3,6 +3,7 @@ FROM jellyfin/jellyfin:unstable
 RUN apt update && \
     apt install -y openssh-client python3-click python3-yaml wget &&\
     wget https://raw.githubusercontent.com/joshuaboniface/rffmpeg/master/rffmpeg -O /usr/local/bin/rffmpeg && \
+    sed -i 's/"jellyfin"/"root"/g' /usr/local/bin/rffmpeg && \
     chmod +x /usr/local/bin/rffmpeg && \
     ln -s /usr/local/bin/rffmpeg /usr/local/bin/ffmpeg && \
     ln -s /usr/local/bin/rffmpeg /usr/local/bin/ffprobe && \
