--- a/Dockerfile.unstable.arm64
+++ b/Dockerfile.unstable.arm64
@@ -14,7 +14,7 @@ LABEL maintainer admin@bitwrk.de
 
 RUN apt update && \
     apt install -y openssh-client python3-click python3-yaml wget &&\
-    wget https://raw.githubusercontent.com/joshuaboniface/rffmpeg/master/rffmpeg.py -O /usr/local/bin/rffmpeg && \
+    wget https://raw.githubusercontent.com/joshuaboniface/rffmpeg/master/rffmpeg -O /usr/local/bin/rffmpeg && \
     sed -i 's/"jellyfin"/"root"/g' /usr/local/bin/rffmpeg && \
     chmod +x /usr/local/bin/rffmpeg && \
     ln -s /usr/local/bin/rffmpeg /usr/local/bin/ffmpeg && \
